Anonymous | Login | 2021-01-20 03:30 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0029447 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2018-01-25 11:47 | 2018-06-29 21:19 | ||||
Reporter | msv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.3.1 | ||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0029447: The constructor of Message_PrinterOStream mixes up cout and cerr | ||||||||
Description | The constructor of Message_PrinterOStream mixes up cout and cerr:if (strcasecmp(theFileName, "cout") == 0) { myStream = &std::cerr; return; } else if (strcasecmp(theFileName, "cerr") == 0) { myStream = &std::cout; return; } | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0073628) git (administrator) 2018-01-28 19:52 |
Branch CR29447 has been created by abv. SHA-1: 1909be62315f512769ba9164f034f51c2c7f0fdf Detailed log of new commits: Author: abv Date: Sun Jan 28 19:49:43 2018 +0300 0029447: The constructor of Message_PrinterOStream mixes up cout and cerr Use of cerr or cout is corrected in Message_PrinterOStream constructor |
(0073629) abv (manager) 2018-01-28 19:53 |
Fix pushed to CR29447, please review. I suppose that testing is not needed since the fix is trivial and this code is never used across OCCT. |
(0073635) msv (developer) 2018-01-29 10:00 |
Reviewed. |
(0073781) git (administrator) 2018-02-05 11:39 |
Branch CR29447 has been deleted by kgv. SHA-1: 1909be62315f512769ba9164f034f51c2c7f0fdf |
![]() |
|||
occt: master 32712d67
Timestamp: 2018-01-28 16:49:43 Author: abv Committer: apn [ Details ] [ Diff ] |
0029447: The constructor of Message_PrinterOStream mixes up cout and cerr Use of cerr or cout is corrected in Message_PrinterOStream constructor |
||
mod - src/Message/Message_PrinterOStream.cxx | [ Diff ] [ File ] | ||
mod - src/TDocStd/TDocStd_Application.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-01-25 11:47 | msv | New Issue | |
2018-01-25 11:47 | msv | Assigned To | => abv |
2018-01-28 19:52 | git | Note Added: 0073628 | |
2018-01-28 19:53 | abv | Note Added: 0073629 | |
2018-01-28 19:53 | abv | Assigned To | abv => msv |
2018-01-28 19:53 | abv | Status | new => resolved |
2018-01-28 19:53 | abv | Steps to Reproduce Updated | View Revisions |
2018-01-29 10:00 | msv | Note Added: 0073635 | |
2018-01-29 10:00 | msv | Assigned To | msv => bugmaster |
2018-01-29 10:00 | msv | Status | resolved => reviewed |
2018-01-29 10:24 | kgv | Product Version | 7.2.0 => 6.3.1 |
2018-01-29 13:55 | apn | Test case number | => Not needed |
2018-01-29 13:55 | apn | Status | reviewed => tested |
2018-02-03 18:59 | apn | Changeset attached | => occt master 32712d67 |
2018-02-03 18:59 | apn | Assigned To | bugmaster => apn |
2018-02-03 18:59 | apn | Status | tested => verified |
2018-02-03 18:59 | apn | Resolution | open => fixed |
2018-02-05 11:39 | git | Note Added: 0073781 | |
2018-02-20 12:58 | aiv | Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:19 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |